# dss_capi

./: .clang-format  .gitignore  .travis.yml  JCFSettings.cfg  LICENSE  License.txt  OPENDSS_LICENSE  README.md  README.pt-BR.md  README.txt  annotated.html  annotated_dup.js  appveyor.yml  build.bat  build.sh  build_linux_arm32.sh  build_linux_arm64.sh  build_linux_x64.sh  build_linux_x86.sh  build_macos_x64.sh  build_win_x64.bat  build_win_x86.bat  classdss_1_1ContextState-members.html  classdss_1_1ContextState.html  classdss_1_1ContextState.js  classdss_1_1ContextState__coll__graph.map  classdss_1_1ContextState__coll__graph.md5  classdss_1_1classic_1_1IActiveClass-members.html  classdss_1_1classic_1_1IActiveClass.html  classdss_1_1classic_1_1IActiveClass.js  classdss_1_1classic_1_1IActiveClass__coll__graph.map  classdss_1_1classic_1_1IActiveClass__coll__graph.md5  classdss_1_1classic_1_1IActiveClass__inherit__graph.map  classdss_1_1classic_1_1IActiveClass__inherit__graph.md5  classdss_1_1classic_1_1IBus-members.html  classdss_1_1classic_1_1IBus.html  classdss_1_1classic_1_1IBus.js  classdss_1_1classic_1_1IBus__coll__graph.map  classdss_1_1classic_1_1IBus__coll__graph.md5  classdss_1_1classic_1_1IBus__inherit__graph.map  (+1383 more)
.github/workflows/: build-zepben.yaml  builds.yml
Source/: Current_ver.txt
Source/CMD/: CmdForms.pas  fncs.pas
Source/CommandLine/: DSSForms.pas  DSSPlot.pas  ImplGlobals.pas  OpenDSS.dpr  OpenDSSCmd.dpr  TOPExport.pas
Source/Common/: AutoAdd.pas  Bus.pas  Circuit.pas  CktElement.pas  CktElementClass.pas  Conductor.pas  ControlQueue.pas  DSSCallBackRoutines.pas  DSSCallBackStructDef.pas  DSSClass.pas  DSSClassDefs.pas  DSSForms.pas  DSSGlobals.pas  Diakoptics.pas  EventQueue.pas  ExportCIMXML.pas  ExportResults.pas  Feeder.pas  GraphProperties.pas  KLUSolve.pas  MW_MemoryDll.pas  MeTIS_Exec.pas  Notes.pas  ShowResults.pas  Solution.pas  SolutionAlgs.pas  Sparse_Math.pas  TOPExport.pas  Terminal.pas  Utilities.pas  Ymatrix.pas  djson.pas
Source/Controls/: CapControl.pas  CapUserControl.pas  ControlClass.pas  ControlElem.pas  ESPVLControl.pas  ExpControl.pas  GenController.pas  GenDispatcher.pas  InvControl.pas  InvControl2.pas  Recloser.pas  RegControl.pas  Relay.pas  StorageController.pas  StorageController2.pas  SwtControl.pas  UPFCControl.pas  VVControl.pas
Source/DDLL/: DActiveClass.pas  DBus.pas  DCapControls.pas  DCapacitors.pas  DCircuit.pas  DCktElement.pas  DCmathLib.pas  DCtrlQueue.pas  DDSS.pas  DDSSElement.pas  DDSSExecutive.pas  DDSSProgress.pas  DError.pas  DFuses.pas  DGICSources.pas  DGenerators.pas  DIDSSProperty.pas  DISource.pas  DLineCodes.pas  DLines.pas  DLoadShape.pas  DLoads.pas  DMeters.pas  DMonitors.pas  DPDELements.pas  DPVSystems.pas  DParallel.pas  DParser.pas  DReclosers.pas  DReduceCkt.pas  DRegControls.pas  DRelays.pas  DSensors.pas  DSettings.pas  DSolution.pas  DStorages.pas  DSwtControls.pas  DText.pas  DTopology.pas  DTransformers.pas  (+5 more)
Source/DLL/: ImplActiveClass.pas  ImplBus.pas  ImplCapControls.pas  ImplCapacitors.pas  ImplCircuit.pas  ImplCktElement.pas  ImplCmathLib.pas  ImplCtrlQueue.pas  ImplDSS.pas  ImplDSSElement.pas  ImplDSSMain.pas  ImplDSSProgress.pas  ImplDSSProperty.pas  ImplDSS_Executive.pas  ImplDSSimComs.pas  ImplError.pas  ImplEvents.pas  ImplFuses.pas  ImplGICSources.pas  ImplGenerators.pas  ImplGlobals.pas  ImplIsources.pas  ImplLineCodes.pas  ImplLines.pas  ImplLoadShapes.pas  ImplLoads.pas  ImplMeters.pas  ImplMonitors.pas  ImplPDElements.pas  ImplPVSystems.pas  ImplParallel.pas  ImplParser.pas  ImplReclosers.pas  ImplReduce.pas  ImplRegControls.pas  ImplRelays.pas  ImplSensors.pas  ImplSettings.pas  ImplSolution.pas  ImplStorages.pas  (+11 more)
Source/Deprecated/: InvControl.pas  PVsystem.pas  Storage.pas  StorageController.pas  StorageVars.pas
Source/EXE/: MyDSSClassDefs.Pas  OpenDSS.deployproj  OpenDSS.dpr  OpenDSS.stat
Source/Executive/: ConnectOptions.pas  ExecCommands.pas  ExecHelper.pas  ExecOptions.pas  Executive.pas  ExportOptions.pas  PlotOptions.pas  ShowOptions.pas
Version8/: License.txt  README.txt
ci/: build_linux_x64.sh  build_linux_x86.sh
docs/: Doxyfile  changelog.md  debug.md  doxygen.md  dss_capi.pds  dss_properties.md  known_differences.md  upstream_branch.md  usage.md
examples/: ctx_openmp.c  minimal_classic.c  minimal_gr.c  schema.c
include/: dss.hpp  dss_CapUserControl.h  dss_GenUserModel.h  dss_PVSystemUserModel.h  dss_StoreDynaModel.h  dss_StoreUserModel.h  dss_UserModels.h  dss_capi.h  dss_capi_ctx.h  dss_classic.hpp  dss_common.hpp  dss_enums.h  dss_obj.hpp  dsspm_capi.h
klusolve/: CMakeLists.txt  KLUSolve.cpp  KLUSolve.h  KLUSystem.cpp  KLUSystem.h  LICENSE  README  csz.h  csz_stuff.c  klusolve.def  klusolve.map
lib/: README
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+67 more)
src/: CAPI_ActiveClass.pas  CAPI_Bus.pas  CAPI_CapControls.pas  CAPI_Circuit.pas  CAPI_DSSElement.pas  CAPI_DSSMain.pas  CAPI_DSSProgress.pas  CAPI_DSSProperty.pas  CAPI_DSS_Executive.pas  CAPI_DSSimComs.pas  CAPI_Error.pas  CAPI_Events.pas  CAPI_Generators.pas  CAPI_LineCodes.pas  CAPI_Lines.pas  CAPI_Metadata.pas  CAPI_Meters.pas  CAPI_PVSystems.pas  CAPI_Reactors.pas  CAPI_Reclosers.pas  CAPI_Settings.pas  CAPI_Solution.pas  CAPI_Text.pas  CAPI_Topology.pas  CAPI_Transformers.pas  CAPI_Utils.pas  CAPI_Vsources.pas  CAPI_XYCurves.pas  COMControlProxy.pas  ControlProxy.pas  classic_to_ctx.py  common-debug.cfg  common-release.cfg  darwin-arm64-dbg.cfg  darwin-arm64.cfg  darwin-x64-dbg.cfg  darwin-x64.cfg  darwin_alias_list.txt  dss_capi.lpr  dss_capi_v7.lpr  (+20 more)
src/altdss_oddie/: CMakeLists.txt  README.md  altdss_oddie.c  altdss_oddie_private.h
(+1362 files in other folders)
